--- a/impact.html
+++ b/impact.html
@@ -521,11 +521,12 @@ div.tocify {
 <div id="awards-honours" class="section level3">
 <h3>Awards &amp; Honours</h3>
 <ul>
+<li>Excellence in Research Award (2021), School of Computing and Information Systems, Univeristy of Melbourne</li>
 <li>Best Reviewer Award (2018,2019), Conference on Neural Information Processing Systems (NeurIPS formerly NIPS)</li>
 <li>WiE Best Postgrad Paper Prize (2017), IEEE Australia Council for PhD student Maryam Fanaeepour’s joint work</li>
 <li>Victorian Young Tall Poppy Science Award (2016), Australian Institute of Policy &amp; Science</li>
 <li>Microsoft Azure ML Award (2015), Microsoft Research</li>
-<li>Excellence in Research Award (2014), Dept CIS, University of Melbourne</li>
+<li>Excellence in Research Award (2014), Dept. of Computing and Information Systems, University of Melbourne</li>
 <li>Gold Star Award (2011), Microsoft Research, top employee accolade</li>
 <li>ShipIt! Awards (2010–12, four times), Microsoft, each for sustained product transfer</li>
 <li>Yahoo! Key Scientific Challenge Prize (2009), Adversarial Machine Learning</li>
