--- a/pubs.html
+++ b/pubs.html
@@ -614,6 +614,21 @@ $(document).ready(function () {
 <ul>
 <li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. <em>No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees</em>. arXiv:2108.10130 [cs.DB]. Aug. 2021 [<a href="https://arxiv.org/abs/2108.10130">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2021nodba.bib', 'bibtex-perera2021nodba')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-weera2021local">
+@misc{weera2021local,
+  title = {Local Intrinsic Dimensionality Signals Adversarial Perturbations},
+  author = {Sandamal Weerasinghe and Tansu Alpcan and Sarah M. Erfani and Christopher Leckie and Benjamin I. P. Rubinstein},
+  note = {arXiv:2109.11803 [cs.LG]},
+  year = {2021},
+  month = {Sep},
+}
+</code></pre></div>
+
+<ul>
+<li>Weerasinghe, Sandamal, Tansu Alpcan, Sarah M. Erfani, Christopher Leckie, and Benjamin I. P. Rubinstein. <em>Local Intrinsic Dimensionality Signals Adversarial Perturbations</em>. arXiv:2109.11803 [cs.LG]. Sep. 2021 [<a href="https://arxiv.org/abs/2109.11803">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('weera2021local.bib', 'bibtex-weera2021local')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-2" class="section level3">
 <h3>2020</h3>
