--- a/impact.html
+++ b/impact.html
@@ -486,8 +486,9 @@ div.tocify {
 <h2>Funding &amp; Awards</h2>
 <div id="funding" class="section level3">
 <h3>Funding</h3>
-<p>Since arriving at the University of Melbourne Oct 2013, I have been awarded competitive funding (Cat 1–4) of <strong>$7.74m total</strong>, <strong>$5.33m as lead-CI</strong>, $2.18m on a per-CI basis. Funding includes:</p>
+<p>Since arriving at the University of Melbourne Oct 2013, I have been awarded competitive funding (Cat 1–4) of <strong>$8.15m total</strong>, <strong>$5.73m as lead-CI</strong>, $2.59m on a per-CI basis. Funding includes:</p>
 <ul>
+<li>2022–2024 <strong>$405k: Australian Research Council</strong> Discovery Project, Benjamin Rubinstein.</li>
 <li>2021–2024 <strong>$3m: Department of Industry, Science, Energy and Resources</strong> AUSMURI, <em>Cybersecurity Assurance for Teams of Computers and Humans (CATCH)</em>, Ben Rubinstein et al. Joint with AUD$5m ARO MURI co-led by Somesh Jha see <a href="https://catch-muri.org">catch-muri.org</a> for full team</li>
 <li>2020–2021 <strong>$34k: National Australia Bank</strong> Consulting Services Agreement, <em>Data privacy assessment</em>, Ben Rubinstein, Olga Ohrimenko.</li>
 <li>2020–2021 <strong>$30k: Australian Bureau of Statistics</strong> Research Contract, <em>Differential privay in a dynamic query environment</em>, Ben Rubinstein, Olga Ohrimenko.</li>
