--- a/pubs.html
+++ b/pubs.html
@@ -344,6 +344,23 @@ $(document).ready(function () {
 <ul>
 <li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Scott Alfeld. “Hard to Forget: Poisoning Attacks on Certified Machine Unlearning”. In: <em>Proceedings of the 36th AAAI Conference on Artificial Intelligence</em>. AAAI. Accepted. 2022 [<a href="https://arxiv.org/abs/2109.08266">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2022hard.bib', 'bibtex-marchant2022hard')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-edwards2020a">
+@article{edwards2020a,
+  title = {A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
+  author = {Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
+  journal = {IEEE Transactions on Information Theory},
+  volume = {68},
+  number = {1},
+  pages = {538--548},
+  year = {2022},
+}
+</code></pre></div>
+
+<ul>
+<li>Edwards, Tobias, Benjamin I. P. Rubinstein, Zuhe Zhang, and Sanming Zhou. “A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy”. In: <em>IEEE Transactions on Information Theory</em> 68.1 (2022), pp. 538-548 [<a href="https://arxiv.org/abs/2007.05975">full</a>; <a href="https://ieeexplore.ieee.org/document/9576501">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('edwards2020a.bib', 'bibtex-edwards2020a')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2021</h3>
@@ -362,21 +379,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Yang, Zhuolin, Linyi Li, Xiaojun Xu, Shiliang Zuo, Qian Chen, Benjamin Rubinstein, Ce Zhang, and Bo Li. “Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness”. In: <em>Proceedings of the Thirty-Fifth Annual Conference on Neural Information Processing Systems</em>. NeurIPS. Accepted. 2021 [<a href="https://papers.nips.cc/paper/2021/hash/937936029af671cf479fa893db91cbdd-Abstract.html">publisher link</a>; <a href="https://arxiv.org/abs/2104.00671">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('yang2021characterizing.bib', 'bibtex-yang2021characterizing')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-edwards2020a">
-@article{edwards2020a,
-  title = {A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
-  author = {Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
-  journal = {IEEE Transactions on Information Theory},
-  note = {Accepted},
-  year = {2021},
-}
-</code></pre></div>
-
-<ul>
-<li>Edwards, Tobias, Benjamin I. P. Rubinstein, Zuhe Zhang, and Sanming Zhou. “A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy”. In: <em>IEEE Transactions on Information Theory</em> (2021). Accepted. [<a href="https://arxiv.org/abs/2007.05975">full</a>; <a href="https://ieeexplore.ieee.org/document/9576501">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('edwards2020a.bib', 'bibtex-edwards2020a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
