--- a/pubs.html
+++ b/pubs.html
@@ -361,6 +361,22 @@ $(document).ready(function () {
 <ul>
 <li>Edwards, Tobias, Benjamin I. P. Rubinstein, Zuhe Zhang, and Sanming Zhou. “A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy”. In: <em>IEEE Transactions on Information Theory</em> 68.1 (2022), pp. 538-548 [<a href="https://arxiv.org/abs/2007.05975">full</a>; <a href="https://ieeexplore.ieee.org/document/9576501">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('edwards2020a.bib', 'bibtex-edwards2020a')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-liu2022state">
+@inproceedings{liu2022state,
+  title = {State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing},
+  author = {Dongge Liu and Van-Thuan Pham and Gidon Ernst and Toby Murray and Benjamin I.P. Rubinstein},
+  booktitle = {IEEE International Conference on Software Analysis, Evolution and Reengineering 2022},
+  year = {2022},
+  series = {SANER},
+  note = {REproducibility Studies and NEgative Results (RENE) Track},
+}
+</code></pre></div>
+
+<ul>
+<li>Liu, Dongge, Van-Thuan Pham, Gidon Ernst, Toby Murray, and Benjamin I.P. Rubinstein. “State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing”. In: <em>IEEE International Conference on Software Analysis, Evolution and Reengineering 2022</em>. SANER. REproducibility Studies and NEgative Results (RENE) Track. 2022 [<a style="cursor: pointer;" onclick="DownloadToFile('liu2022state.bib', 'bibtex-liu2022state')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2021</h3>
