--- a/pubs.html
+++ b/pubs.html
@@ -502,11 +502,12 @@ $(document).ready(function () {
   year = {2021},
   series = {ICDM},
   booktitle = {2021 IEEE 21th International Conference on Data Mining},
+  pages = {459--468},
 }
 </code></pre></div>
 
 <ul>
-<li>Oetomo, Bastian, R. Malinga Perera, Renata Borovica-Gajic, and Benjamin I. P. Rubinstein. “Cutting to the Chase with Warm-Start Contextual Bandits”. In: <em>2021 IEEE 21th International Conference on Data Mining</em>. ICDM. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('oetomo2021cutting.bib', 'bibtex-oetomo2021cutting')">BibTeX</a>]</li>
+<li>Oetomo, Bastian, R. Malinga Perera, Renata Borovica-Gajic, and Benjamin I. P. Rubinstein. “Cutting to the Chase with Warm-Start Contextual Bandits”. In: <em>2021 IEEE 21th International Conference on Data Mining</em>. ICDM. 2021, pp. 459-468 [<a href="https://ieeexplore.ieee.org/document/9679034">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('oetomo2021cutting.bib', 'bibtex-oetomo2021cutting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
