--- a/pubs.html
+++ b/pubs.html
@@ -375,7 +375,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Liu, Dongge, Van-Thuan Pham, Gidon Ernst, Toby Murray, and Benjamin I.P. Rubinstein. “State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing”. In: <em>IEEE International Conference on Software Analysis, Evolution and Reengineering 2022</em>. SANER. REproducibility Studies and NEgative Results (RENE) Track. 2022 [<a style="cursor: pointer;" onclick="DownloadToFile('liu2022state.bib', 'bibtex-liu2022state')">BibTeX</a>]</li>
+<li>Liu, Dongge, Van-Thuan Pham, Gidon Ernst, Toby Murray, and Benjamin I.P. Rubinstein. “State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing”. In: <em>IEEE International Conference on Software Analysis, Evolution and Reengineering 2022</em>. SANER. REproducibility Studies and NEgative Results (RENE) Track. 2022 [<a href="https://arxiv.org/abs/2112.15498">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2022state.bib', 'bibtex-liu2022state')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
@@ -581,11 +581,12 @@ $(document).ready(function () {
   booktitle = {Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering},
   series = {ASE},
   note = {New Ideas and Emerging Results (NIER) track},
+  pages = {1337--1341},
 }
 </code></pre></div>
 
 <ul>
-<li>Pham, Van-Thuan, Manh-Dung Nguyen, Quang-Trung Ta, Toby Murray, and Benjamin I. P. Rubinstein. “Towards Systematic and Dynamic Task Allocation for Collaborative Parallel Fuzzing”. In: <em>Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. New Ideas and Emerging Results (NIER) track. 2021 [<a href="https://github.com/MelbourneFuzzingHub/aflteam?s=09">code</a>; <a href="https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('pham2021towards.bib', 'bibtex-pham2021towards')">BibTeX</a>]</li>
+<li>Pham, Van-Thuan, Manh-Dung Nguyen, Quang-Trung Ta, Toby Murray, and Benjamin I. P. Rubinstein. “Towards Systematic and Dynamic Task Allocation for Collaborative Parallel Fuzzing”. In: <em>Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. New Ideas and Emerging Results (NIER) track. 2021, pp. 1337-1341 [<a href="https://github.com/MelbourneFuzzingHub/aflteam?s=09">code</a>; <a href="https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf">full</a>; <a href="https://ieeexplore.ieee.org/document/9678810">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('pham2021towards.bib', 'bibtex-pham2021towards')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
