--- a/pubs.html
+++ b/pubs.html
@@ -342,7 +342,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Scott Alfeld. “Hard to Forget: Poisoning Attacks on Certified Machine Unlearning”. In: <em>Proceedings of the 36th AAAI Conference on Artificial Intelligence</em>. AAAI. Accepted. 2022 [<a href="https://arxiv.org/abs/2109.08266">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2022hard.bib', 'bibtex-marchant2022hard')">BibTeX</a>]</li>
+<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Scott Alfeld. “Hard to Forget: Poisoning Attacks on Certified Machine Unlearning”. In: <em>Proceedings of the 36th AAAI Conference on Artificial Intelligence</em>. AAAI. Accepted. 2022 [<a href="https://arxiv.org/abs/2109.08266">full</a>; <a href="https://github.com/ngmarchant/attack-unlearning">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2022hard.bib', 'bibtex-marchant2022hard')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
