--- a/pubs.html
+++ b/pubs.html
@@ -363,6 +363,22 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-wang2022a">
+@inproceedings{wang2022a,
+  title = {Measuring and Mitigating Name Biases in Neural Machine Translation},
+  author = {Jun Wang and Benjamin I. P. Rubinstein and Trevor Cohn},
+  booktitle = {Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics},
+  series = {ACL},
+  year = {2022},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Wang, Jun, Benjamin I. P. Rubinstein, and Trevor Cohn. “Measuring and Mitigating Name Biases in Neural Machine Translation”. In: <em>Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics</em>. ACL. Accepted. 2022 [<a style="cursor: pointer;" onclick="DownloadToFile('wang2022a.bib', 'bibtex-wang2022a')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-liu2022state">
 @inproceedings{liu2022state,
   title = {State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing},
