--- a/pubs.html
+++ b/pubs.html
@@ -330,6 +330,21 @@ $(document).ready(function () {
 <h3>2022</h3>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-jin2022are">
+@inproceedings{jin2022are,
+  title = {Are We There Yet? Timing and Floating-Point Attacks on Differential Privacy Systems},
+  author = {Jiankai Jin and Eleanor McMurtry and Benjamin I. P. Rubinstein and Olga Ohrimenko},
+  year = {2022},
+  booktitle = {Proceedings of the 43rd IEEE Symposium on Security and Privacy},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Jin, Jiankai, Eleanor McMurtry, Benjamin I. P. Rubinstein, and Olga Ohrimenko. “Are We There Yet? Timing and Floating-Point Attacks on Differential Privacy Systems”. In: <em>Proceedings of the 43rd IEEE Symposium on Security and Privacy</em>. Accepted. 2022 [<a href="https://arxiv.org/abs/2112.05307">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('jin2022are.bib', 'bibtex-jin2022are')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-marchant2022hard">
 @inproceedings{marchant2022hard,
   title = {Hard to Forget: Poisoning Attacks on Certified Machine Unlearning},
