--- a/pubs.html
+++ b/pubs.html
@@ -547,14 +547,14 @@ $(document).ready(function () {
   title = {A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons},
   author = {Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
   year = {2021},
-  booktitle = {2021 IEEE 60th Conference on Decision and Control},
+  booktitle = {2021 60th IEEE Conference on Decision and Control},
   series = {CDC},
-  note = {Accepted},
+  pages = {2690--2695},
 }
 </code></pre></div>
 
 <ul>
-<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons”. In: <em>2021 IEEE 60th Conference on Decision and Control</em>. CDC. Accepted. 2021 [<a href="http://arxiv.org/abs/2109.14208">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Sun2021A.bib', 'bibtex-Sun2021A')">BibTeX</a>]</li>
+<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons”. In: <em>2021 60th IEEE Conference on Decision and Control</em>. CDC. 2021, pp. 2690-2695 [<a href="http://arxiv.org/abs/2109.14208">full</a>; <a href="https://ieeexplore.ieee.org/document/9683543">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Sun2021A.bib', 'bibtex-Sun2021A')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
