--- a/pubs.html
+++ b/pubs.html
@@ -418,14 +418,15 @@ $(document).ready(function () {
   title = {Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness},
   year = {2021},
   author = {Zhuolin Yang and Linyi Li and Xiaojun Xu and Shiliang Zuo and Qian Chen and Pan Zhou and Benjamin Rubinstein and Ce Zhang and Bo Li},
-  booktitle = {Proceedings of the Thirty-Fifth Annual Conference on Neural Information Processing Systems},
+  booktitle = {Advances in Neural Information Processing Systems},
   series = {NeurIPS},
-  note = {Accepted},
+  pages = {17642--17655},
+  volume = {34},
 }
 </code></pre></div>
 
 <ul>
-<li>Yang, Zhuolin, Linyi Li, Xiaojun Xu, Shiliang Zuo, Qian Chen, Pan Zhou, Benjamin Rubinstein, Ce Zhang, and Bo Li. “Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness”. In: <em>Proceedings of the Thirty-Fifth Annual Conference on Neural Information Processing Systems</em>. NeurIPS. Accepted. 2021 [<a href="https://papers.nips.cc/paper/2021/hash/937936029af671cf479fa893db91cbdd-Abstract.html">publisher link</a>; <a href="https://arxiv.org/abs/2104.00671">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('yang2021characterizing.bib', 'bibtex-yang2021characterizing')">BibTeX</a>]</li>
+<li>Yang, Zhuolin, Linyi Li, Xiaojun Xu, Shiliang Zuo, Qian Chen, Pan Zhou, Benjamin Rubinstein, Ce Zhang, and Bo Li. “Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness”. In: <em>Advances in Neural Information Processing Systems</em>. Vol. 34. NeurIPS. 2021, pp. 17642-17655 [<a href="https://papers.nips.cc/paper/2021/hash/937936029af671cf479fa893db91cbdd-Abstract.html">publisher link</a>; <a href="https://arxiv.org/abs/2104.00671">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('yang2021characterizing.bib', 'bibtex-yang2021characterizing')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
