--- a/pubs.html
+++ b/pubs.html
@@ -335,13 +335,13 @@ $(document).ready(function () {
   title = {Are We There Yet? Timing and Floating-Point Attacks on Differential Privacy Systems},
   author = {Jiankai Jin and Eleanor McMurtry and Benjamin I. P. Rubinstein and Olga Ohrimenko},
   year = {2022},
-  booktitle = {Proceedings of the 43rd IEEE Symposium on Security and Privacy},
-  note = {Accepted},
+  booktitle = {2022 IEEE Symposium on Security and Privacy (SP)},
+  pages = {1547--1547},
 }
 </code></pre></div>
 
 <ul>
-<li>Jin, Jiankai, Eleanor McMurtry, Benjamin I. P. Rubinstein, and Olga Ohrimenko. “Are We There Yet? Timing and Floating-Point Attacks on Differential Privacy Systems”. In: <em>Proceedings of the 43rd IEEE Symposium on Security and Privacy</em>. Accepted. 2022 [<a href="https://arxiv.org/abs/2112.05307">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('jin2022are.bib', 'bibtex-jin2022are')">BibTeX</a>]</li>
+<li>Jin, Jiankai, Eleanor McMurtry, Benjamin I. P. Rubinstein, and Olga Ohrimenko. “Are We There Yet? Timing and Floating-Point Attacks on Differential Privacy Systems”. In: <em>2022 IEEE Symposium on Security and Privacy (SP)</em>. 2022, pp. 1547-1547 [<a href="https://arxiv.org/abs/2112.05307">full</a>; <a href="https://www.computer.org/csdl/proceedings-article/sp/2022/131600b547/1CIO7Ty2xr2">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('jin2022are.bib', 'bibtex-jin2022are')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
