arXiv certified rounding

--- a/pubs.html
+++ b/pubs.html
@@ -408,6 +408,22 @@ $(document).ready(function () {
 <ul>
 <li>Liu, Dongge, Van-Thuan Pham, Gidon Ernst, Toby Murray, and Benjamin I.P. Rubinstein. “State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing”. In: <em>IEEE International Conference on Software Analysis, Evolution and Reengineering 2022</em>. SANER. REproducibility Studies and NEgative Results (RENE) Track. 2022 [<a href="https://arxiv.org/abs/2112.15498">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2022state.bib', 'bibtex-liu2022state')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-jin2022getting">
+@misc{jin2022getting,
+  title = {Getting a-Round Guarantees: Floating-Point Attacks on Certified
+  Robustness},
+  author = {Jiankai Jin and Olga Ohrimenko and Benjamin I. P. Rubinstein},
+  note = {arXiv:2205.10159 [cs.CR]},
+  year = {2022},
+  month = {May},
+}
+</code></pre></div>
+
+<ul>
+<li>Jin, Jiankai, Olga Ohrimenko, and Benjamin I. P. Rubinstein. <em>Getting a-Round Guarantees: Floating-Point Attacks on Certified Robustness</em>. arXiv:2205.10159 [cs.CR]. May. 2022 [<a href="https://arxiv.org/abs/2205.10159">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('jin2022getting.bib', 'bibtex-jin2022getting')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2021</h3>
