--- a/pubs.html
+++ b/pubs.html
@@ -394,6 +394,22 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-sun2022securing">
+@inproceedings{sun2022securing,
+  title = {Securing Cyber-Physical Systems: Physics-Enhanced  Adversarial Learning for Autonomous Platoons},
+  author = {Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
+  booktitle = {Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track},
+  series = {ECML-PKDD},
+  year = {2022},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Securing Cyber-Physical Systems: Physics-Enhanced Adversarial Learning for Autonomous Platoons”. In: <em>Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track</em>. ECML-PKDD. Accepted. 2022 [<a style="cursor: pointer;" onclick="DownloadToFile('sun2022securing.bib', 'bibtex-sun2022securing')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-liu2022state">
 @inproceedings{liu2022state,
   title = {State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing},
