--- a/pubs.html
+++ b/pubs.html
@@ -398,7 +398,7 @@ $(document).ready(function () {
 @inproceedings{sun2022securing,
   title = {Securing Cyber-Physical Systems: Physics-Enhanced  Adversarial Learning for Autonomous Platoons},
   author = {Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
-  booktitle = {Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track},
+  booktitle = {European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases},
   series = {ECML-PKDD},
   year = {2022},
   note = {Accepted},
@@ -406,7 +406,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Securing Cyber-Physical Systems: Physics-Enhanced Adversarial Learning for Autonomous Platoons”. In: <em>Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track</em>. ECML-PKDD. Accepted. 2022 [<a style="cursor: pointer;" onclick="DownloadToFile('sun2022securing.bib', 'bibtex-sun2022securing')">BibTeX</a>]</li>
+<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Securing Cyber-Physical Systems: Physics-Enhanced Adversarial Learning for Autonomous Platoons”. In: <em>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases</em>. ECML-PKDD. Accepted. 2022 [<a style="cursor: pointer;" onclick="DownloadToFile('sun2022securing.bib', 'bibtex-sun2022securing')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -626,14 +626,14 @@ $(document).ready(function () {
   title = {Strategic mitigation against wireless attacks on autonomous platoons},
   author = {Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
   year = {2021},
-  booktitle = {Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track},
+  booktitle = {European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases},
   series = {ECML-PKDD},
   pages = {69--84},
 }
 </code></pre></div>
 
 <ul>
-<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Strategic mitigation against wireless attacks on autonomous platoons”. In: <em>Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track</em>. ECML-PKDD. 2021, pp. 69-84 [<a href="https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/">code</a>; <a href="https://link.springer.com/chapter/10.1007/978-3-030-86514-6_5">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Sun2021strategic.bib', 'bibtex-Sun2021strategic')">BibTeX</a>]</li>
+<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Strategic mitigation against wireless attacks on autonomous platoons”. In: <em>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases</em>. ECML-PKDD. 2021, pp. 69-84 [<a href="https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/">code</a>; <a href="https://link.springer.com/chapter/10.1007/978-3-030-86514-6_5">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Sun2021strategic.bib', 'bibtex-Sun2021strategic')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
