--- a/impact.html
+++ b/impact.html
@@ -486,9 +486,10 @@ div.tocify {
 <h2>Funding &amp; Awards</h2>
 <div id="funding" class="section level3">
 <h3>Funding</h3>
-<p>Since arriving at the University of Melbourne Oct 2013, I have been awarded competitive funding (Cat 1–4) of <strong>$8.15m total</strong>, <strong>$5.73m as lead-CI</strong>, $2.59m on a per-CI basis. Funding includes:</p>
+<p>Since arriving at the University of Melbourne Oct 2013, I have been awarded competitive funding (Cat 1–4) of <strong>$8.45m total</strong>, <strong>$6.04m as lead-CI</strong>, $2.65m on a per-CI basis. Funding includes:</p>
 <ul>
 <li>2022–2024 <strong>$405k: Australian Research Council</strong> Discovery Project, Benjamin Rubinstein.</li>
+<li>2022–2023 <strong>$304k: Defence Science &amp; Technology Group</strong> Research Agreement, <em>Adversarial Reinforcement Learning: Attacks and Defences</em>, Benjamin Rubinstein, Andrew Cullen, Chris Leckie, Tansu Alpcan, Sarah Erfani.</li>
 <li>2021–2024 <strong>$3m: Department of Industry, Science, Energy and Resources</strong> AUSMURI, <em>Cybersecurity Assurance for Teams of Computers and Humans (CATCH)</em>, Ben Rubinstein et al. Joint with AUD$5m ARO MURI co-led by Somesh Jha see <a href="https://catch-muri.org">catch-muri.org</a> for full team</li>
 <li>2020–2021 <strong>$34k: National Australia Bank</strong> Consulting Services Agreement, <em>Data privacy assessment</em>, Ben Rubinstein, Olga Ohrimenko.</li>
 <li>2020–2021 <strong>$30k: Australian Bureau of Statistics</strong> Research Contract, <em>Differential privay in a dynamic query environment</em>, Ben Rubinstein, Olga Ohrimenko.</li>
@@ -502,7 +503,7 @@ div.tocify {
 <li>2018–2019 <strong>$24k: Mondo Power</strong> AMSI internship program, <em>Anomaly detection in time series energy consumption data</em>, Benjamin Rubinstein, Leyla Roohi.</li>
 <li>2018 <strong>$31k: Australia Bureau of Statistics</strong> Research Contract, <em>Scaling up Bayesian record linkage</em>, Benjamin Rubinstein, Neil Marchant.</li>
 <li>2018–2019 <strong>$77k: Oceania Cyber Security Centre</strong> Seed Grant, <em>Detection of Infected Internet-of-Thing Devices to Prevent Distributed Denial of Service Attacks</em>, Sarah Erfani et al. </li>
-<li>2017–2022 <strong>$1.014m: Defence Science &amp; Technology Group and Data61/CSIRO</strong> Next Gen Tech Fund CRP, <em>Adversarial Machine Learning for Cyber</em>, Benjamin Rubinstein et al. </li>
+<li>2017–2022 <strong>$1.014m: Defence Science &amp; Technology Group and Data61/CSIRO</strong> Next Gen Tech Fund CRP, <em>Adversarial Machine Learning for Cyber</em>, Benjamin Rubinstein, Chris Leckie, Tansu Alpcan, Sarah Erfani, Jun Zhang.</li>
 <li>2017–2021 <strong>$970k: Department of Education and Training</strong> <a href="https://www.education.gov.au/academic-centres-cyber-security-excellence-accse">Academic Centre for Cyber Security Excellence</a> (ACCSE), Chris Leckie et al. </li>
 <li>2017–2018 <strong>$93k: Defence Science &amp; Technology Group</strong> Research Contract, <em>Tactical Security and Health in Multi-Modal Sensor Control and Management</em>, Iman Shames, Benjamin Rubinstein, Farhad Farokhii.</li>
 <li>2017–2018 <strong>$24k: Australia Bureau of Statistics</strong> AMSI internship program, <em>Evaluating feasibility of Bayesian entity resolution</em>, Benjamin Rubinstein, Neil Marchant.</li>
