--- a/pubs.html
+++ b/pubs.html
@@ -447,7 +447,7 @@ $(document).ready(function () {
 <div class="bibox" style="display: none;">
 <pre><code id="bibtex-yang2021characterizing">
 @inproceedings{yang2021characterizing,
-  title = {Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness},
+  title = {TRS: Transferability Reduced Ensemble via Promoting Gradient Diversity and Model Smoothness},
   year = {2021},
   author = {Zhuolin Yang and Linyi Li and Xiaojun Xu and Shiliang Zuo and Qian Chen and Pan Zhou and Benjamin Rubinstein and Ce Zhang and Bo Li},
   booktitle = {Advances in Neural Information Processing Systems},
@@ -458,7 +458,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Yang, Zhuolin, Linyi Li, Xiaojun Xu, Shiliang Zuo, Qian Chen, Pan Zhou, Benjamin Rubinstein, Ce Zhang, and Bo Li. “Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness”. In: <em>Advances in Neural Information Processing Systems</em>. Vol. 34. NeurIPS. 2021, pp. 17642-17655 [<a href="https://papers.nips.cc/paper/2021/hash/937936029af671cf479fa893db91cbdd-Abstract.html">publisher link</a>; <a href="https://arxiv.org/abs/2104.00671">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('yang2021characterizing.bib', 'bibtex-yang2021characterizing')">BibTeX</a>]</li>
+<li>Yang, Zhuolin, Linyi Li, Xiaojun Xu, Shiliang Zuo, Qian Chen, Pan Zhou, Benjamin Rubinstein, Ce Zhang, and Bo Li. “TRS: Transferability Reduced Ensemble via Promoting Gradient Diversity and Model Smoothness”. In: <em>Advances in Neural Information Processing Systems</em>. Vol. 34. NeurIPS. 2021, pp. 17642-17655 [<a href="https://papers.nips.cc/paper/2021/hash/937936029af671cf479fa893db91cbdd-Abstract.html">publisher link</a>; <a href="https://arxiv.org/abs/2104.00671">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('yang2021characterizing.bib', 'bibtex-yang2021characterizing')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
