--- a/pubs.html
+++ b/pubs.html
@@ -346,18 +346,20 @@ $(document).ready(function () {
 
 <div class="bibox" style="display: none;">
 <pre><code id="bibtex-marchant2022hard">
-@inproceedings{marchant2022hard,
+@article{marchant2022hard,
   title = {Hard to Forget: Poisoning Attacks on Certified Machine Unlearning},
   author = {Neil G. Marchant and Benjamin I. P. Rubinstein and Scott Alfeld},
   year = {2022},
-  booktitle = {Proceedings of the 36th AAAI Conference on Artificial Intelligence},
+  journal = {Proceedings of the 36th AAAI Conference on Artificial Intelligence},
   series = {AAAI},
-  note = {Accepted},
+  volume = {36},
+  number = {7},
+  pages = {7691--7700},
 }
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Scott Alfeld. “Hard to Forget: Poisoning Attacks on Certified Machine Unlearning”. In: <em>Proceedings of the 36th AAAI Conference on Artificial Intelligence</em>. AAAI. Accepted. 2022 [<a href="https://arxiv.org/abs/2109.08266">full</a>; <a href="https://github.com/ngmarchant/attack-unlearning">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2022hard.bib', 'bibtex-marchant2022hard')">BibTeX</a>]</li>
+<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Scott Alfeld. “Hard to Forget: Poisoning Attacks on Certified Machine Unlearning”. In: <em>Proceedings of the 36th AAAI Conference on Artificial Intelligence</em>. AAAI 36.7 (2022), pp. 7691-7700 [<a href="https://arxiv.org/abs/2109.08266">full</a>; <a href="https://github.com/ngmarchant/attack-unlearning">code</a>; <a href="https://doi.org/10.1609/aaai.v36i7.20736">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2022hard.bib', 'bibtex-marchant2022hard')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -382,15 +384,15 @@ $(document).ready(function () {
 @inproceedings{wang2022a,
   title = {Measuring and Mitigating Name Biases in Neural Machine Translation},
   author = {Jun Wang and Benjamin I. P. Rubinstein and Trevor Cohn},
-  booktitle = {Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics},
+  booktitle = {Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
   series = {ACL},
+  pages = {2576--2590},
   year = {2022},
-  note = {Accepted},
 }
 </code></pre></div>
 
 <ul>
-<li>Wang, Jun, Benjamin I. P. Rubinstein, and Trevor Cohn. “Measuring and Mitigating Name Biases in Neural Machine Translation”. In: <em>Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics</em>. ACL. Accepted. 2022 [<a style="cursor: pointer;" onclick="DownloadToFile('wang2022a.bib', 'bibtex-wang2022a')">BibTeX</a>]</li>
+<li>Wang, Jun, Benjamin I. P. Rubinstein, and Trevor Cohn. “Measuring and Mitigating Name Biases in Neural Machine Translation”. In: <em>Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)</em>. ACL. 2022, pp. 2576-2590 [<a href="https://aclanthology.org/2022.acl-long.184/">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('wang2022a.bib', 'bibtex-wang2022a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
