--- a/pubs.html
+++ b/pubs.html
@@ -396,6 +396,22 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-weera2021local">
+@inproceedings{weera2021local,
+  title = {Local Intrinsic Dimensionality Signals Adversarial Perturbations},
+  author = {Sandamal Weerasinghe and Tansu Alpcan and Sarah M. Erfani and Christopher Leckie and Benjamin I. P. Rubinstein},
+  booktitle = {2022 IEEE 61st Conference on Decision and Control},
+  series = {CDC},
+  note = {Accepted. In invited session Resilience, Security, and Privacy for Intelligent and Interconnected Systems},
+  year = {2022},
+}
+</code></pre></div>
+
+<ul>
+<li>Weerasinghe, Sandamal, Tansu Alpcan, Sarah M. Erfani, Christopher Leckie, and Benjamin I. P. Rubinstein. “Local Intrinsic Dimensionality Signals Adversarial Perturbations”. In: <em>2022 IEEE 61st Conference on Decision and Control</em>. CDC. Accepted. In invited session Resilience, Security, and Privacy for Intelligent and Interconnected Systems. 2022 [<a href="https://arxiv.org/abs/2109.11803">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('weera2021local.bib', 'bibtex-weera2021local')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-sun2022securing">
 @inproceedings{sun2022securing,
   title = {Securing Cyber-Physical Systems: Physics-Enhanced  Adversarial Learning for Autonomous Platoons},
@@ -699,21 +715,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. <em>No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees</em>. arXiv:2108.10130 [cs.DB]. Aug. 2021 [<a href="https://arxiv.org/abs/2108.10130">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2021nodba.bib', 'bibtex-perera2021nodba')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-weera2021local">
-@misc{weera2021local,
-  title = {Local Intrinsic Dimensionality Signals Adversarial Perturbations},
-  author = {Sandamal Weerasinghe and Tansu Alpcan and Sarah M. Erfani and Christopher Leckie and Benjamin I. P. Rubinstein},
-  note = {arXiv:2109.11803 [cs.LG]},
-  year = {2021},
-  month = {Sep},
-}
-</code></pre></div>
-
-<ul>
-<li>Weerasinghe, Sandamal, Tansu Alpcan, Sarah M. Erfani, Christopher Leckie, and Benjamin I. P. Rubinstein. <em>Local Intrinsic Dimensionality Signals Adversarial Perturbations</em>. arXiv:2109.11803 [cs.LG]. Sep. 2021 [<a href="https://arxiv.org/abs/2109.11803">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('weera2021local.bib', 'bibtex-weera2021local')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-2" class="section level3">
