--- a/impact.html
+++ b/impact.html
@@ -486,8 +486,9 @@ div.tocify {
 <h2>Funding &amp; Awards</h2>
 <div id="funding" class="section level3">
 <h3>Funding</h3>
-<p>Since arriving at the University of Melbourne Oct 2013, I have been awarded competitive funding (Cat 1–4) of <strong>$8.62m total</strong>, <strong>$6.2m as lead-CI</strong>, $2.68m on a per-CI basis. Funding includes:</p>
+<p>Since arriving at the University of Melbourne Oct 2013, I have been awarded competitive funding (Cat 1–4) of <strong>$9.21m total</strong>, <strong>$6.2m as lead-CI</strong>, $2.8m on a per-CI basis. Funding includes:</p>
 <ul>
+<li>2022–2025 <strong>$589k: Office of National Intelligence</strong> National Intelligence and Security Discovery Research Grants 2022, James Bailey, Michele Trenti, Richard Sinnott, Benjamin Rubinstein, Krista Ehinger.</li>
 <li>2022–2024 <strong>$405k: Australian Research Council</strong> Discovery Project, Benjamin Rubinstein.</li>
 <li>2022–2023 <strong>$304k: Defence Science &amp; Technology Group</strong> Research Agreement, <em>Adversarial Reinforcement Learning: Attacks and Defences</em>, Benjamin Rubinstein, Andrew Cullen, Chris Leckie, Tansu Alpcan, Sarah Erfani.</li>
 <li>2022–2023 <strong>$167k: Data61/CSIRO</strong> Collaboration Research Project, <em>Adversarial Machine Learning for Cyber (extension)</em>, Benjamin Rubinstein, Andrew Cullen, Chris Leckie, Tansu Alpcan, Sarah Erfani.</li>
