robust indices arxiv

--- a/pubs.html
+++ b/pubs.html
@@ -458,6 +458,21 @@ $(document).ready(function () {
 <ul>
 <li>Jin, Jiankai, Olga Ohrimenko, and Benjamin I. P. Rubinstein. <em>Getting a-Round Guarantees: Floating-Point Attacks on Certified Robustness</em>. arXiv:2205.10159 [cs.CR]. May. 2022 [<a href="https://arxiv.org/abs/2205.10159">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('jin2022getting.bib', 'bibtex-jin2022getting')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-bachfischer22testing">
+@misc{bachfischer22testing,
+  title = {Testing the Robustness of Learned Index Structures},
+  author = {Matthias Bachfischer and Renata Borovica-Gajic and Benjamin I. P. Rubinstein},
+  note = {arXiv:2207.11575 [cs.DB]},
+  year = {2022},
+  month = {July},
+}
+</code></pre></div>
+
+<ul>
+<li>Bachfischer, Matthias, Renata Borovica-Gajic, and Benjamin I. P. Rubinstein. <em>Testing the Robustness of Learned Index Structures</em>. arXiv:2207.11575 [cs.DB]. Jul. 2022 [<a href="https://arxiv.org/abs/2207.11575">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('bachfischer22testing.bib', 'bibtex-bachfischer22testing')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2021</h3>
