--- a/pubs.html
+++ b/pubs.html
@@ -1586,7 +1586,7 @@ $(document).ready(function () {
 @incollection{rubinstein2015bounding,
   title = {Bounding embeddings of {VC} classes into maximum classes},
   author = {J. Hyam Rubinstein and Benjamin I. P. Rubinstein and Peter L. Bartlett},
-  booktitle = {Measures of Complexity},
+  booktitle = {Measures of Complexity: Festschrift of Alexey Chervonenkis},
   editor = {V. Vovk and H. Papadopoulos and A. Gammerman},
   pages = {303--325},
   year = {2015},
@@ -1595,7 +1595,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Rubinstein, J. Hyam, Benjamin I. P. Rubinstein, and Peter L. Bartlett. “Bounding embeddings of VC classes into maximum classes”. In: <em>Measures of Complexity</em>. Ed. by V. Vovk, H. Papadopoulos and A. Gammerman. Springer, 2015, pp. 303-325 [<a href="https://arxiv.org/pdf/1401.7388">PDF</a>; <a href="http://www.springer.com/us/book/9783319218519">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2015bounding.bib', 'bibtex-rubinstein2015bounding')">BibTeX</a>]</li>
+<li>Rubinstein, J. Hyam, Benjamin I. P. Rubinstein, and Peter L. Bartlett. “Bounding embeddings of VC classes into maximum classes”. In: <em>Measures of Complexity: Festschrift of Alexey Chervonenkis</em>. Ed. by V. Vovk, H. Papadopoulos and A. Gammerman. Springer, 2015, pp. 303-325 [<a href="https://arxiv.org/pdf/1401.7388">PDF</a>; <a href="http://www.springer.com/us/book/9783319218519">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2015bounding.bib', 'bibtex-rubinstein2015bounding')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
