--- a/group.html
+++ b/group.html
@@ -341,15 +341,15 @@ $(document).ready(function () {
 <li><a href="https://www.linkedin.com/in/shijie-liu-9162b8151/">Shijie Liu</a>. (w Sarah Erfani 2021– ). Certified robustness.</li>
 <li><a href="https://www.linkedin.com/in/jun-wang-15065b170/">Jun Wang</a>. (w Trevor Cohn 2020– ). Adversarial learning for NLP.</li>
 <li><a href="https://www.linkedin.com/in/guoxin-sun-338888162/">Guoxin Sun</a>. (w Tansu Alpcan, Seyit Camtepe 2020– ). Distributed adversarial learning.</li>
-<li>Ruihan Zhang (w Tim Miller, Kris Ehinger 2019– ). Explainable AI and machine learning.</li>
+<li><a href="https://scholar.google.com/citations?user=gjSlsnQAAAAJ&amp;hl=en">Ruihan Zhang</a> (w Tim Miller, Kris Ehinger 2019– ). Explainable AI and machine learning.</li>
 <li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
 <li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
-<li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Thuan Pham, Gidon Ernst at LMU Munich 2018– ). Software fuzzing with machine learning.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
+<li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Thuan Pham, Gidon Ernst at LMU Munich 2018–22). Software fuzzing with machine learning → Software Engineer at Google</li>
 <li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (w Beka Steorts at Duke, Aurore Delaigle 2016–20). Bayesian record linkage, adaptive importance sampling for efficient evaluation → Postdoc at Univ Melbourne</li>
 <li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017–19). Secure storage and private querying for telecommunications metadata → Postdoc at Univ Melbourne → Digital fraud analyst at ANZ Bank</li>
 <li><a href="https://scholar.google.com/citations?user=qDDC09EAAAAJ&amp;hl=en">Yuan Li</a> (w Trevor Cohn 2015–19). Crowd sourcing, Bayesian optimisation, NLP → Postdoc at Univ Melbourne</li>
