--- a/pubs.html
+++ b/pubs.html
@@ -432,15 +432,16 @@ $(document).ready(function () {
 @inproceedings{liu2022state,
   title = {State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing},
   author = {Dongge Liu and Van-Thuan Pham and Gidon Ernst and Toby Murray and Benjamin I.P. Rubinstein},
-  booktitle = {IEEE International Conference on Software Analysis, Evolution and Reengineering 2022},
+  booktitle = {2022 IEEE International Conference on Software Analysis, Evolution and Reengineering},
   year = {2022},
   series = {SANER},
   note = {REproducibility Studies and NEgative Results (RENE) Track},
+  pages = {720--730},
 }
 </code></pre></div>
 
 <ul>
-<li>Liu, Dongge, Van-Thuan Pham, Gidon Ernst, Toby Murray, and Benjamin I.P. Rubinstein. “State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing”. In: <em>IEEE International Conference on Software Analysis, Evolution and Reengineering 2022</em>. SANER. REproducibility Studies and NEgative Results (RENE) Track. 2022 [<a href="https://arxiv.org/abs/2112.15498">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2022state.bib', 'bibtex-liu2022state')">BibTeX</a>]</li>
+<li>Liu, Dongge, Van-Thuan Pham, Gidon Ernst, Toby Murray, and Benjamin I.P. Rubinstein. “State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing”. In: <em>2022 IEEE International Conference on Software Analysis, Evolution and Reengineering</em>. SANER. REproducibility Studies and NEgative Results (RENE) Track. 2022, pp. 720-730 [<a href="https://arxiv.org/abs/2112.15498">full</a>; <a href="https://ieeexplore.ieee.org/document/9825758">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2022state.bib', 'bibtex-liu2022state')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
