NeurIPS, NeurIPS, JSSAM

--- a/pubs.html
+++ b/pubs.html
@@ -330,6 +330,38 @@ $(document).ready(function () {
 <h3>2022</h3>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-cullen2022double">
+@inproceedings{cullen2022double,
+  title = {Double Bubble, Toil and Trouble: Enhancing Certified Robustness through Transitivity},
+  author = {Andrew C. Cullen and Paul Montague and Shijie Liu and Sarah Monazam Erfani and Benjamin I. P. Rubinstein},
+  booktitle = {Advances in Neural Information Processing Systems},
+  series = {NeurIPS},
+  note = {Accepted},
+  year = {2022},
+}
+</code></pre></div>
+
+<ul>
+<li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah Monazam Erfani, and Benjamin I. P. Rubinstein. “Double Bubble, Toil and Trouble: Enhancing Certified Robustness through Transitivity”. In: <em>Advances in Neural Information Processing Systems</em>. NeurIPS. Accepted. 2022 [<a style="cursor: pointer;" onclick="DownloadToFile('cullen2022double.bib', 'bibtex-cullen2022double')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-rubinstein2022unlabelled">
+@inproceedings{rubinstein2022unlabelled,
+  title = {Unlabelled Sample Compression Schemes for Intersection-Closed Classes and Extremal Classes},
+  author = {J. Hyam Rubinstein and Benjamin I. P. Rubinstein},
+  booktitle = {Advances in Neural Information Processing Systems},
+  series = {NeurIPS},
+  note = {Accepted},
+  year = {2022},
+}
+</code></pre></div>
+
+<ul>
+<li>Rubinstein, J. Hyam and Benjamin I. P. Rubinstein. “Unlabelled Sample Compression Schemes for Intersection-Closed Classes and Extremal Classes”. In: <em>Advances in Neural Information Processing Systems</em>. NeurIPS. Accepted. 2022 [<a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2022unlabelled.bib', 'bibtex-rubinstein2022unlabelled')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-jin2022are">
 @inproceedings{jin2022are,
   title = {Are We There Yet? Timing and Floating-Point Attacks on Differential Privacy Systems},
@@ -393,6 +425,22 @@ $(document).ready(function () {
 
 <ul>
 <li>Wang, Jun, Benjamin I. P. Rubinstein, and Trevor Cohn. “Measuring and Mitigating Name Biases in Neural Machine Translation”. In: <em>Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)</em>. ACL. 2022, pp. 2576-2590 [<a href="https://aclanthology.org/2022.acl-long.184/">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('wang2022a.bib', 'bibtex-wang2022a')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-marchant2022bayesian">
+@article{marchant2022bayesian,
+  title = {{B}ayesian Graphical Entity Resolution using Exchangeable Random Partition Priors},
+  author = {Neil G. Marchant and Benjamin I. P. Rubinstein and Rebecca C. Steorts},
+  year = {2022},
+  journal = {Journal of Survey Statistics and Methodology},
+  note = {Special Issue on Data Integration. Accepted},
+  publisher = {Oxford University Press},
+}
+</code></pre></div>
+
+<ul>
+<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Rebecca C. Steorts. “Bayesian Graphical Entity Resolution using Exchangeable Random Partition Priors”. In: <em>Journal of Survey Statistics and Methodology</em> (2022). Special Issue on Data Integration. Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('marchant2022bayesian.bib', 'bibtex-marchant2022bayesian')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
